--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div id="about" class="col-md-12">
 
               <div id="me" >
-                  <img id="pic" src="https://media-exp1.licdn.com/dms/image/C4D03AQHEwOTrTV6EVQ/profile-displayphoto-shrink_800_800/0/1644951870359?e=1663804800&v=beta&t=8blZy1YMd7jOFoLyEbcshfJcW-tn495rdOdyqR8XLj4" class="card-img-top" alt="James Fisher profile pic" style="width:300px">
+                  <img id="pic" src="https://lh3.googleusercontent.com/9kg_QW-65uGzTwaBhrj2sO1C0lJObFceiZIQU6COPteqYfTbnjxwz5ooJG-ixpXy-bAH_-kNbZyx524u_kWXOhOc1wWFz_4TN_1hi7moNHXHJKEk5kA8oE5ik8fiW_NDVQkpp_hSm3I=w2400" class="card-img-top" alt="profile pic" style="width:300px">
                   <div class="card-body">
                       <h3 class="card-title">About Me</h3>
                       <p class="card-text lead" id="about-me">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
