--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 
 
-<nav id="navbar" class="navbar navbar-expand-lg bg-light " style="max-width: 100%;">
+<nav id="navbar" class="navbar navbar-expand-lg bg-light  " style="max-width: 100%;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"></a>
      
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#skills">Skills</a>
           </li>
@@ -42,7 +42,7 @@
     </div>
     </nav>
 
-    
+
     <div class="hero">
       <div class="hero-text">
         <h1>Sophia Rankin</h1>
@@ -60,7 +60,7 @@
           <div id="about" class="col-md-12">
 
               <div id="me" >
-                  <img id="pic" src="https://media-exp1.licdn.com/dms/image/C4D03AQHEwOTrTV6EVQ/profile-displayphoto-shrink_800_800/0/1644951870359?e=1663804800&v=beta&t=8blZy1YMd7jOFoLyEbcshfJcW-tn495rdOdyqR8XLj4" class="card-img-top" alt="James Fisher profile pic" style="width:300px">
+                  <img id="pic" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" class="card-img-top" alt="me" style="width:300px">
                   <div class="card-body">
                       <h3 class="card-title">About Me</h3>
                       <p class="card-text lead" id="about-me">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
