--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <h4 class="card-title">Password generator</h4>
                         <p class="card-text port-card">This is a secure password gerator that requires certin critria to generate a secure password .</p>
                         <a href="https://github.com/PhiaRan/PasswordGenerator" target="_blank"
-                            class="btn btn-dark">Visit Password generator</a>
+                            class="btn btn-dark">Visit Generator</a>
                     </div>
                 </div>
 
